# ChangeLog for sys-apps/openrc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/openrc/ChangeLog,v 1.80 2009/10/14 11:04:35 vapier Exp $

*openrc-0.6.1-r4 (24 Oct 2010)

  25 Oct 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.1-r4.ebuild:
  New core networking with macaddr interface renaming. :)

  20 Aug 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.1-r3.ebuild:
  moved to stable.

*openrc-0.6.1-r3 (18 Aug 2010)

  18 Aug 2010; Daniel Robbins <drobbins@funtoo.org> +openrc-0.6.1-r3.ebuild:
  new ebuild intended for unmasking. Auto-VLAN support should now work.
  netif.lo moved to sysinit runlevel.

*openrc-0.6.1-r2 (14 Aug 2010)

  14 Aug 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.1-r2.ebuild:
  New revision of Funtoo core networking stuff - quite a few changes in
  this release.

*openrc-0.6.1-r1 (10 Aug 2010)

  10 Aug 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.1-r1.ebuild:
  New release with new core network stuff - many improvements have been made.
  Masked for testing.

*openrc-0.6.1 (03 Jun 2010)

  03 Jun 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.1.ebuild:
  New OpenRC with newer iproute2-based Funtoo network config, masked for
  testing.

  04 Jan 2010; Daniel Robbins <drobbins@funtoo.org> openrc-0.6.0.ebuild:
  SCH-2009.1 - moving openrc-0.6.0 (Funtoo Core Networking) to stable for all
  arches.

*openrc-0.6.0 (21 Dec 2009)

  21 Dec 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.6.0.ebuild:
  New upstream release merged in. NOT YET TESTED, thus the KEYWORDS=""

*openrc-0.5.2-r1 (27 Nov 2009)

  27 Nov 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.2-r1.ebuild:
  New release with some funtoo fixes and all current upstream fixes.

*openrc-0.5.2 (18 Nov 2009)

  18 Nov 2009; Daniel Robbins <drobbins@funtoo.org> +openrc-0.5.2.ebuild:
  New network construction kit template support in /etc/netif.d. Pretty