@@ -3,7 +3,9 @@ AUX openrc.logrotate 71 RMD160 4e7370ca873bd917f16e2b8cfc4bc71accbf2353 SHA1 ef1
 DIST corenetwork-1.0.4.tar.bz2 10691 RMD160 a72ab77f9eb60d9072db75ee94c0bf8d94b6d076 SHA1 ab78ca2e77bec865b47c9aaf227892e24a4bb4bb SHA256 3a32059ec9f8f6c95096390c14714f22d41690c36df761ea2f0e0b4947dae46e
 DIST corenetwork-1.0.5.tar.bz2 11003 RMD160 6201081388b5b6ce75ca71c5d84de03d51d8274d SHA1 19e831226c39cdaa5d73c6bd5d8d08613d88eca1 SHA256 fe33d9e00e1ed302ed672edf2c8b887f834b03624df604dc03ad1143637b5cdb
 DIST openrc-0.6.1.tar.bz2 154897 RMD160 d3ee62bdc57b38f2ecfdb2e55d75b5279a4253b7 SHA1 07c27e443b7adfcab02eb3e267f4d228bb580dfc SHA256 c7847254e41b613b76ae570cf786ce8164d637962ad4580d0825b4b62b475e07
+DIST openrc-0.6.4.2010.10.27.tar.bz2 155001 RMD160 06e0bc188d8f20e83d6af0c70901b580767844cd SHA1 82bc79768cf91ec59a410910bf26c3c82faad16e SHA256 eaebfe6dd390773494a4dcb9c7ea35ec2046abc156dace78a93870801f769245
 EBUILD openrc-0.6.1-r3.ebuild 5070 RMD160 b9109f354bbd37bbb298d1a53c84a9a31818652b SHA1 4cb49c6e2022317eae60474105af7f9f510de891 SHA256 4f94e3074ff81d159f4e0716c7626cd4c2fae427601e748797616e48fbce36b4
 EBUILD openrc-0.6.1-r4.ebuild 5008 RMD160 ca87b166a274980925e1d8642f7433af558ed079 SHA1 ee4de3c011e0daf2eb2d329df9b7a564224399fe SHA256 1b79a206979220162625e6a3d9531e4a69854a10828819660afc8418f728a678
-MISC ChangeLog 14085 RMD160 66bb7c1dd550ad168c0ceb4e49852c46d8c56cf8 SHA1 52c3102eef14d151e05c6475c637c4f37df146ca SHA256 2ffddf6548924dea70a5e861df9755225b369add93fb95b66d640ed950316400
+EBUILD openrc-0.6.4.ebuild 5039 RMD160 a84cd29a766246b4478e32c4ae7cd057e7519725 SHA1 88c49f757af531b1997f5e8c9a052f46e12b1e1e SHA256 c96d8275b5b858bf66f124213c1378ff2829b05432c980730546f5318bdf9367
+MISC ChangeLog 14315 RMD160 1227b69fd541642b4e0afc1a2b1d43e4cad72b6b SHA1 4ec6c43c1b6d322fbf659d0382b53a3680834624 SHA256 5a5a7a54653787c06c6e6399bb5e38608b57aea951ff3901dad699a6c92aea3b
 MISC metadata.xml 309 RMD160 af05ed6a2bd3ec66097c304597484905b765661e SHA1 af7c0891711dbc24b07b7546a0b8f79f2637cdf6 SHA256 9f9b210bf70b7eb3d4958976711f8ae33860c310b4c04b8dbcdd3784de54773b
